--- a/question-3/index.html
+++ b/question-3/index.html
@@ -15,15 +15,14 @@
 		<h2>Description</h2>
 		<h3>Primary</h3>
 		<p>
-			We use <a href='https://angular.io/'>Angular</a> internally for some of our systems. Your task will be to convert question(s) 1 and 2 into an Angular Application.
+			We use <a href='https://angular.io/'>Angular</a> internally for some of our systems. Your task will be to convert question(s) 1 and 2 into a basic Angular Application.
 		</p>
 		<div>
 			<h2>Requirements</h2>
 			<ul>
-				<li>Draw a graph using the d3 library</li>
-				<li>Generate the points randomly</li>
-				<li>Graph fills the window</li>
-				<li>Graph resizes with window</li>
+				<li>Question 1 as an Angular application</li>
+				<li>Question 2 as an Angular application</li>
+				<li>Include a way to navigate between the two</li>
 			</ul>
 		</div>
 		<div>
